--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ project(":core") {
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+		implementation group: 'com.badlogicgames.gdx', name: 'gdx-ai', version: '1.8.2'
         
     }
 }
