--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,6 @@ project(":core") {
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        
+        api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
     }
 }
